--- a/mp/game/mod_hl2mp/cfg/config.cfg
+++ b/mp/game/mod_hl2mp/cfg/config.cfg
@@ -38,6 +38,7 @@ bind "F9" "load quick"
 bind "MOUSE1" "+duck"
 bind "MWHEELUP" "invprev"
 bind "MWHEELDOWN" "invnext"
+r_lightmap_bicubic_set "1"
 cl_chatfilter_version "1"
 crosshair "0"
 m_pitch "0.022000"
@@ -47,12 +48,11 @@ mat_software_aa_strength "0.000000"
 mat_software_aa_strength_vgui "1.000000"
 hud_fastswitch "1"
 cl_playermodel "models/humans/group03/male_03.mdl"
-sv_specspeed "1.5"
-sv_skyname "sky_day01_07"
+sv_skyname "sky_day01_07_hdr"
 snd_surround_speakers "2"
 volume "0.01"
 snd_musicvolume "0.040000"
-name "habel"
+name "kuaru !"
 cl_logofile "materials/vgui/logos/spray.vtf"
 cl_downloadfilter "mapsonly"
 mat_colorcorrection "1"
