--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,11 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Keep official protobuf binaries
+!mp/src/thirdparty/protobuf-2.6.1/bin/
+!mp/src/thirdparty/protobuf-2.6.1/bin/win64/2015/staticcrt/release
+!mp/src/thirdparty/protobuf-2.6.1/bin/win64/2015/staticcrt/debug
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
