--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Setup
       run: |
-        chmod u+x mp/src/buildallprojects devtools/bin/vpc
+        chmod u+x mp/src/buildallprojects mp/src/devtools/bin/vpc
         mkdir -p ~/.ccache
     - name: Build
       run: mp/src/buildallprojects
