--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,7 @@ bld/
 !mp/src/thirdparty/protobuf-2.6.1/bin/
 !mp/src/thirdparty/protobuf-2.6.1/bin/win64/2015/staticcrt/release
 !mp/src/thirdparty/protobuf-2.6.1/bin/win64/2015/staticcrt/debug
+!mp/src/devtools/bin/
 !mp/src/devtools/bin/texttoarray.py
 !mp/src/devtools/bin/vpc
 !mp/src/devtools/bin/vpc.exe
@@ -151,10 +152,12 @@ bld/
 .ninja_log
 compile_commands.json
 mp/game/mod_hl2mp_linux64
-lib/public/linux64/mathlib.a
-lib/public/linux64/raytrace.a
-lib/public/linux64/tier1.a
-lib/public/linux64/vgui_controls.a
+mp/src/lib/public/linux64/mathlib.a
+mp/src/lib/public/linux64/raytrace.a
+mp/src/lib/public/linux64/tier1.a
+mp/src/lib/public/linux64/vgui_controls.a
+mp/game/mod_hl2mp/videoconfig_linux.cfg
+mp/game/steam_appid.txt
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -520,3 +523,4 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
